<resources>
    <string name="app_name">Swachh Rakshak</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_offers">Offers</string>
    <string name="title_add">Add</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_account">Account</string>
    <string name="swachh_wallet">Swachh Wallet</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="logout">Log out</string>
    <string name="garbage_history">Garbage History</string>
    <string name="title_activity_garbage_collector">GarbageCollectorActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCKXh3pBeT257JfIt4Kt9WX-QZBIFHXlPM</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ongoing_trips">Collector Trips</string>
    <string name="userVerification">User Verification</string>
</resources>