<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_offers"
        android:icon="@drawable/ic_baseline_ac_unit_24"
        android:title="@string/title_offers" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/title_add" />

    <item
        android:id="@+id/navigation_wallet"
        android:icon="@drawable/ic_baseline_account_balance_wallet_24"
        android:title="@string/title_wallet" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/title_account" />

</menu>