<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_ongoing_trips"
            android:icon="@drawable/ic_baseline_directions_car_24"
            android:title="@string/ongoing_trips" />
        <item
            android:id="@+id/navigation_offers"
            android:icon="@drawable/ic_baseline_ac_unit_24"
            android:title="@string/title_offers" />

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="@string/logout" />
    </group>
</menu>