<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.sih.project.ui.home.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_offers"
        android:name="com.sih.project.ui.home.ui.offers.OffersFragment"
        android:label="@string/title_offers"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_add"
        android:name="com.sih.project.ui.home.ui.add.AddPostFragment"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_wallet"
        android:name="com.sih.project.ui.home.ui.wallet.WalletFragment"
        android:label="@string/title_wallet"
        tools:layout="@layout/fragment_wallet" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.sih.project.ui.home.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" >
        <action
            android:id="@+id/action_navigation_account_to_garbageFragment"
            app:destination="@id/garbageFragment" />
    </fragment>
    <fragment
        android:id="@+id/garbageFragment"
        android:name="com.sih.project.ui.garbageHistory.GarbageFragment"
        android:label="fragment_garbage"
        tools:layout="@layout/fragment_garbage" />

</navigation>