<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.sih.project.ui.garbageCollectorUI.ui.maps.MapsFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_offers"
        android:name="com.sih.project.ui.home.ui.offers.OffersFragment"
        android:label="@string/title_offers"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_ongoing_trips"
        android:name="com.sih.project.ui.garbageCollectorUI.ui.onGoingTrips.OnGoingTripsFragment"
        android:label="@string/ongoing_trips"
        tools:layout="@layout/fragment_ongoing_trip" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.sih.project.ui.garbageCollectorUI.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>